--- a/src/treemap/style.css
+++ b/src/treemap/style.css
@@ -23,14 +23,18 @@ html,body, #root {
   z-index: 5;
 }
 
-.render {
+.text-layer {
   position: absolute;
   top: 0;
   left: 0;
   z-index: 10;
-  transform-origin: 0 0 0;
 }
 
+.treemap-container {
+  width: 100%;
+  height: 100%;
+  transform-origin: left top;
+}
 
 .tile {
   z-index: 10;
