--- a/src/treemap/style.css
+++ b/src/treemap/style.css
@@ -14,30 +14,31 @@ html,body, #root {
   overflow: hidden;
   position: relative;
   background-color: black;
+  transform-origin: 0 0 0;
 }
 
-.tile-layer {
-  position: absolute;
-  top: 0;
+.canvas {
+  top:0;
   left: 0;
-  z-index: 5;
-}
-
-.text-layer {
   position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 10;
+  z-index: 0;
+  transform-origin: 0 0 0;
 }
 
-.treemap-container {
-  width: 100%;
-  height: 100%;
-  transform-origin: left top;
+.textLayer {
+  z-index: 2;
+  transform-origin: 0 0 0;
+  position: absolute;
+  top:0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
 }
 
 .tile {
-  z-index: 10;
+  z-index: 2;
   display: flex;
   flex-direction: column;
   position: absolute;
@@ -46,17 +47,22 @@ html,body, #root {
 
 }
 
-.tile-name, .tile-value {
-  color: white;
-  font-size: 1em;
-  text-shadow: 0.015em 0.015em 0 rgb(50 49 54 / 28%);
+.render {
+  z-index: 2;
+  transform-origin: 0 0 0;
+  position: absolute;
+  top:0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
 }
 
-.tile-value { font-size: .5em;}
 
-
-/* .tile-name, .tile-value {
-  color: #fff;
-  text-shadow: 0.015em 0.015em 0 rgb(50 49 54 / 28%)
-  #fbdb00;#7ec17e; #ed7171;
-} */
+.amir {
+  width: 100px;
+  height: 50px;
+  background-color: blue;
+  opacity: .5;
+}
