--- a/src/treemap/style.css
+++ b/src/treemap/style.css
@@ -44,25 +44,6 @@ html,body, #root {
   position: absolute;
   justify-content: center;
   align-items: center;
-
-}
-
-.render {
-  z-index: 2;
-  transform-origin: 0 0 0;
-  position: absolute;
-  top:0;
-  left: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  box-sizing: border-box;
-}
-
-
-.amir {
-  width: 100px;
-  height: 50px;
-  background-color: blue;
-  opacity: .5;
+  color:white;
+  text-shadow: 0.015em 0.015em 0 rgb(50 49 54 / 28%);
 }
