--- a/src/treemap/style.css
+++ b/src/treemap/style.css
@@ -13,7 +13,7 @@ html,body, #root {
   height: 100%;
   overflow: hidden;
   position: relative;
-  background-color: black;
+  /* background-color: black; */
   transform-origin: 0 0 0;
 }
 
@@ -35,15 +35,53 @@ html,body, #root {
   justify-content: center;
   align-items: center;
   box-sizing: border-box;
+  will-change: transfrom;
 }
 
-.tile {
+.sector {
   z-index: 2;
   display: flex;
   flex-direction: column;
   position: absolute;
-  justify-content: center;
-  align-items: center;
+  will-change: transfrom;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
   color:white;
   text-shadow: 0.015em 0.015em 0 rgb(50 49 54 / 28%);
+}
+.sector-name {
+  display: inline-flex;
+  color: white;
+  line-height: 1.1em;
+  background-color: black;
+  overflow: hidden;
+  max-height: 13px;
+  max-height: 15px;
+  padding: 0 1em;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  direction: rtl;
+  text-align: right;
+}
+.sector-name:hover { background-color: yellow; color:black}
+
+.tile {
+  z-index: 3;
+  display: flex;
+  transition: all ease .5s;
+  flex-direction: column;
+  position: absolute;
+  justify-content: center;
+  align-items: center;
+  will-change: transfrom;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+  color:white;
+  text-shadow: 0.015em 0.015em 0 rgb(50 49 54 / 28%);
+}
+
+.tile-name {
+  direction: rtl;
+  text-align: right;
+  font-size: .5em;
 }
