--- a/src/treemap/style.css
+++ b/src/treemap/style.css
@@ -26,7 +26,7 @@ html,body, #root {
 }
 
 .textLayer {
-  z-index: 2;
+  z-index: 1;
   transform-origin: 0 0 0;
   position: absolute;
   top:0;
@@ -36,10 +36,11 @@ html,body, #root {
   align-items: center;
   box-sizing: border-box;
   will-change: transfrom;
+  backface-visibility: hidden;
 }
 
 .sector {
-  z-index: 3;
+  z-index: 2;
   display: flex;
   position: absolute;
   flex-direction: column;
@@ -77,7 +78,7 @@ html,body, #root {
 }
 
 .tile {
-  z-index: 2;
+  z-index: 3;
   display: flex;
   overflow: hidden;
   position: absolute;
